force-app/main/default/objects/Internal_Note__c/Internal_Note__c.object-meta.xml
<CustomObject>
    <description>Insolvency related internal notes</description>
    <label>Internal Note</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>