force-app/main/default/objects/Internal_Note__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Note Details</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Note Details</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>