force-app/main/default/objects/Internal_Note__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Custom field for created  Date</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>Custom field for created  Date</inlineHelpText>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>