force-app/main/default/objects/Internal_Note__c/fields/History_ID__c.field-meta.xml
<CustomField>
    <fullName>History_ID__c</fullName>
    <description>History ID from DebtNext database</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>History ID from DebtNext database</inlineHelpText>
    <label>History ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>