force-app/main/default/objects/Internal_Note__c/fields/Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Insolvency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Insolvency record</description>
    <inlineHelpText>Related Insolvency record</inlineHelpText>
    <label>Insolvency</label>
    <referenceTo>Insolvency__c</referenceTo>
    <relationshipLabel>Internal Notes</relationshipLabel>
    <relationshipName>Internal_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>