force-app/main/default/objects/Internal_Note__c/recordTypes/Private.recordType-meta.xml
<RecordType>
    <fullName>Private</fullName>
    <active>true</active>
    <description>Private Insolvency Notes</description>
    <label>Private</label>
</RecordType>